--- a/index.html
+++ b/index.html
@@ -7,9 +7,33 @@
     <title>Document</title>
 </head>
 <body>
-    Привет ГИТ
+    <p style ="margin-top:30px; margin-bottom:50px; margin-left: 30px; margin-right: 30px;">ПриветПриветПриветПриветПриветПриветПриветПриветПриветПривет
+        ПриветПриветПриветПриветПриветПриветПриветПриветvvv
+        ПриветПриветПриветПриветПриветПриветПриветПривет
+        ПриветvvПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПриветПривет
+        ПриветПриветПриветПриветПриветПриветПриветПриветПриветПривет</p>
+        <p style="margin:30px;">Привет</p>
+        <p style="margin:10px 20px 30px 40px;">Привет</p>
+        <p style ="margin:10px 20px 30px;">Привет</p>
+        <p style ="margin:10px 50px;">Привет</p>
 
-    Пока ГИТ
+
+        <p style="padding:30px;">Привет</p>
+        <p style="padding:10px 20px 30px 40px;">Привет</p>
+        <p style ="padding:10px 20px 30px;">Привет</p>
+        <p style ="padding:10px 50px;">Привет</p>
+
+
+
+        
+
+        
+
+    <p>Привет</p>
+
+    <b>Привет</b>
+
+    <i>Пока</i>
 
 </body>
 </html>
